--- a/src/components/PageCheckboxCard/PageCheckboxCard.module.css
+++ b/src/components/PageCheckboxCard/PageCheckboxCard.module.css
@@ -9,20 +9,16 @@
 
 .button {
     width: 100%;
-    height: 35px;
+    height: 40px;
     border-radius: 5px;
     border-style: none;
     margin-top: 3px;
     cursor: pointer;
-    background-color: #f5bc20;
+    background-color: #FFCE22;
 }
 
 .button:hover {
-    background-color: #f8d470;
-}
-
-.button:active {
-    background-color: #f0c140;
+    background-color: #FFD84D;
 }
 
 .menuWithCheckbox {
@@ -30,6 +26,9 @@
     justify-content: space-between;
     align-items: center;
     margin: 10px auto;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 130%;
 }
 
 .customCheckbox {
@@ -46,10 +45,10 @@
 
     /* custom checkbox */
     .checkmark {
-        height: 22px;
-        width: 22px;
-        border: 1px solid #AAAAAA;
-        border-radius: 5px;
+        height: 23px;
+        width: 23px;
+        border: 1px solid #BDBDBD;
+        border-radius: 6px;
     }
 
     .checkmark:hover {
@@ -59,8 +58,13 @@
 
     /* checked when the .custom-checkbox is selected */
     input:checked~.checkmark {
-        background-color: #1a6ece;
-        border-color: #4a93c4;
+        background-color: #2469F6;
+        border-color: #5087F8;
+    }
+
+    input:checked~.checkmark:hover {
+        background-color: #5087F8;
+        border-color: #5087F8;
     }
 
     /* create checked mark */
